--- a/Node.js/Day 2/lab 02.1-QNA Maker Bot/.env
+++ b/Node.js/Day 2/lab 02.1-QNA Maker Bot/.env
@@ -1,5 +1,2 @@
-knowledgebaseID=a212c6fe-5142-497b-993f-dcb099ae7fa8
-EndpointKey=c12ad8aa-7ecd-4df4-8673-8d8a509f6742
-
-MicrosoftAppId=
-MicrosoftAppPassword=
+Authorization=EndpointKey c12ad8aa-7ecd-4df4-8673-8d8a509f6742
+uri=https://mcdonalds.azurewebsites.net/qnamaker/knowledgebases/412e8217-3e19-4da0-aff7-be8f09440f68/generateAnswer
